--- a/.gitignore
+++ b/.gitignore
@@ -17,12 +17,14 @@ bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
 out/
+data/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
